--- a/index.html
+++ b/index.html
@@ -40,14 +40,44 @@
                     </div>
                     <h5 class="current-date-txt regular-txt">Wed, 05 Jan</h5>
                 </div>
-                <div class="weather-summary-content">
-                    <img src="assets/weather/clouds.svg" alt="" class="weather-summary-container">
+
+                <div class="weather-summary-container">
+                
+                    <img src="assets/weather/clouds.svg" class="weather-summary-img">
                     <div class="weather-summary-info">
                         <h1 class="h1 temp-text">29 ºC</h1>
                         <h3 class="condition-txt regular-txt"> Clouds</h3>
                     </div>
                 </div>
 
+                <div class="weather-conditions-container">
+                    <div class="condition-item">
+                        <span class="material-symbols-outlined">
+                            water_drop
+                            </span>
+                        <div class="condition-info">
+                            <h5 class="regular-txt">Humidity</h5>
+                            <h5 class="humidity-value-txt">55%</h5>
+                        </div>
+                    </div>
+
+                    <div class="condition-item">
+                        <span class="material-symbols-outlined">
+                            air
+                            </span>
+                        <div class="condition-info">
+                            <h5 class="regular-txt">Wind Spedd</h5>
+                            <h5 class="wind-value-txt">2 m/s</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="forecast-items-container">
+                    <div class="forecast-item">
+                        <h5 class="forecast-item-date regular-txt">05 Jan</h5>
+                        <img src="assets/weather/thunderstorm.svg" class="forecast-item-img">
+                    </div>
+                </div>
             </section>
 
         </main>
