--- a/index.html
+++ b/index.html
@@ -76,6 +76,25 @@
                     <div class="forecast-item">
                         <h5 class="forecast-item-date regular-txt">05 Jan</h5>
                         <img src="assets/weather/thunderstorm.svg" class="forecast-item-img">
+                        <h5 class="forecast-item-temp">29 ºC</h5>
+                    </div>
+
+                    <div class="forecast-item">
+                        <h5 class="forecast-item-date regular-txt">05 Jan</h5>
+                        <img src="assets/weather/thunderstorm.svg" class="forecast-item-img">
+                        <h5 class="forecast-item-temp">29 ºC</h5>
+                    </div>
+
+                    <div class="forecast-item">
+                        <h5 class="forecast-item-date regular-txt">05 Jan</h5>
+                        <img src="assets/weather/thunderstorm.svg" class="forecast-item-img">
+                        <h5 class="forecast-item-temp">29 ºC</h5>
+                    </div>
+
+                    <div class="forecast-item">
+                        <h5 class="forecast-item-date regular-txt">05 Jan</h5>
+                        <img src="assets/weather/thunderstorm.svg" class="forecast-item-img">
+                        <h5 class="forecast-item-temp">29 ºC</h5>
                     </div>
                 </div>
             </section>
