--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 
                     <img src="assets/weather/clouds.svg" class="weather-summary-img">
                     <div class="weather-summary-info">
-                        <h1 class="h1 temp-text">29 ºC</h1>
+                        <h1 class="temp-txt">29 ºC</h1>
                         <h3 class="condition-txt regular-txt"> Clouds</h3>
                     </div>
                 </div>
